<resources>
    <string name="app_name">CSD Chat Bot</string>
    <string name="Open">CSD Chat Bot</string>
    <string name="Close">CSD Chat Bot</string>
    <string name="nameHint">Name</string>
    <string name="descriptionHint">Description</string>
    <string name="dateHint">Date</string>
    <string name="timeHint">Time</string>
    <string name="priorityHint">Priority</string>
    <string name="low">Low</string>
    <string name="mid">Medium</string>
    <string name="high">High</string>
    <string name="add">Add</string>
    <string name="button">Button</string>
    <string name="newCourse">New Course</string>
    <string name="courseName">Name: </string>
    <string name="courseTeacher">Teacher: </string>
    <string name="enterCourseNameHint">Enter Name</string>
    <string name="courseCode">Code: </string>
    <string name="enterCourseCodeHint">Enter Code</string>
    <string name="courseDescription">Description: </string>
    <string name="enterCourseDescriptionHint">Enter Description</string>
    <string name="courseECTS">ECTS: </string>
    <string name="enterCourseECTSHint">Enter ECTS</string>
    <string name="courseUrl">Url: </string>
    <string name="enterCourseUrlHint">Enter Url</string>
    <string name="courseArea">Area: </string>
    <string name="postCourseAreaA">A - Micro-electronic Systems Architecture</string>
    <string name="postCourseAreaB">B - Computer Networks and Telecommunications</string>
    <string name="postCourseAreaC">C - Parallel and Distributed Systems</string>
    <string name="postCourseAreaD">D - Information Systems and Human-Computer Interaction</string>
    <string name="postCourseAreaE">E - Computational and Cognitive Vision and Robotics</string>
    <string name="postCourseAreaF">F - Algorithms and Systems Analysis</string>
    <string name="postCourseAreaG">G - Biomedical Informatics and Technology</string>
    <string name="postCourseAreaO">Θ - Multimedia Technology</string>
    <string name="coreCourses">Core Courses</string>
    <string name="E1">E1 - Elective Courses from Mathematics and Physics</string>
    <string name="E2">E2 - Elective Courses from Other Sciences</string>
    <string name="E3">E3 - Networks and Telecommunications</string>
    <string name="E4">E4 - Hardware and Computer Systems</string>
    <string name="E5">E5 - Software Systems and Applications</string>
    <string name="E6">E6 - Information Systems</string>
    <string name="E7">E7 - Computer Vision and Robotics</string>
    <string name="E8">E8 - Algorithms and Computation Theory</string>
    <string name="E9">E9 - Society and Informatics</string>
    <string name="EE">Free Elective Courses</string>
    <string name="saveBtn">Save</string>
    <string name="editBtn">Edit</string>
    <string name="showAllRemindersBtn">Show All Reminders</string>
    <string name="searchBtn">Search</string>
    <string name="searchContactsHint">Search Contacts…</string>
    <string name="emailHint">Email</string>
    <string name="resetPasswordBtn">Reset Password</string>
    <string name="noContacts">You have no contacts in your contacts list</string>
    <string name="noCourseReminders">This course has no reminders set yet</string>
    <string name="noRemindersSet">You have no reminders set yet</string>
    <string name="disenroll">Disenroll</string>
    <string name="enroll">Enroll</string>
    <string name="addAllToCalendar">Add All to Calendar</string>
    <string name="addNewReminder">Add New Reminder</string>
    <string name="addNewCourse">Add New Course</string>
    <string name="setTeacher">Set Teacher</string>
    <string name="editCourse">Edit Course</string>
    <string name="goToCourseRemindersBtn">Go To Course Reminders</string>
    <string name="deleteCourse">Delete Course</string>
    <string name="reminderPriority">Priority:</string>
    <string name="reminderDateAndTime">Date And Time:</string>
    <string name="mainCourses">Main Courses</string>
    <string name="electiCourses">Electic Courses</string>
    <string name="otherDeptCourses">Courses from other Departments</string>
    <string name="emailSubject">Subject</string>
    <string name="emailBody">Body</string>
    <string name="sendBtn">Send</string>
    <string name="courses">Courses</string>
    <string name="myCourses">My Courses</string>
    <string name="myReminders">My Reminders</string>
    <string name="myContacts">My Contacts</string>
    <string name="myDetails">My Details</string>
    <string name="updateCourses">Update Courses</string>
    <string name="setAdmin">Set Admin</string>
    <string name="reminders">Reminders</string>
    <string name="calendar">Calendar</string>
    <string name="password">Password</string>
    <string name="logInBtn">Log In</string>
    <string name="signUpBtn">Sign Up</string>
    <string name="goToSettings">Continue</string>
    <string name="givePermission">
        In order to user this app you have to give permission for recording when the mic is pressed.
        This permission is required in order for the voice controls to be enabled.\n\n
        This feature is available only for smartphones with Android 6 or greater.
    </string>
    <string name="remove">Remove</string>
    <string name="removeSelfFromTeacher">Remove course from teaching courses</string>
    <string name="forgotPassword">Forgot Password</string>
    <string name="noEnrolledCourses">You have not enrolled in any courses yet</string>
    <string name="undergaduateCourses">Undergraduate Courses</string>
    <string name="postgraduateCourses">Postgraduate Courses</string>
    <string name="username">Username</string>
    <string name="editDetails">Edit Details</string>
    <string name="changePassword">Change Password</string>
    <string name="validate">Validate</string>
    <string name="alreadyUser">Already a user? Log In</string>
    <string name="resultsForSearching">Your results for searching:</string>
    <string name="addAll">Add All</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
    <string name="continuee">Continue</string>
    <string name="assign">Assign</string>
    <string name="viewTeachingCoursesBtn">View Teaching Courses</string>
    <string name="verificationEmail">A verification email has been sent to the email address you provided. Please verify your account in order to be able to log in.</string>
</resources>
