<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".activities.AddUndergraduateCourseActivity"
    tools:openDrawer="start">

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:headerLayout="@layout/header"
        app:menu="@menu/slide_menu">


    </com.google.android.material.navigation.NavigationView>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".activities.AddContactActivity">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#768591"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme"
            app:navigationIcon="@drawable/ic_menu" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/addCourseLL"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                tools:ignore="MissingConstraints"
                tools:layout_editor_absoluteY="20dp">

                <TextView
                    android:id="@+id/addCoursePageTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:paddingBottom="10dp"
                    android:text="@string/newCourse"
                    android:textColor="#768591"
                    android:textSize="25sp"
                    android:textStyle="bold" />


                <TextView
                    android:id="@+id/addCourseNameField"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:text="@string/courseName"
                    android:textColor="#768591" />

                <EditText
                    android:id="@+id/addCourseName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:autofillHints="@string/enterCourseNameHint"
                    android:hint="@string/enterCourseNameHint"
                    android:inputType="text"
                    android:paddingStart="20dp"
                    android:paddingEnd="20dp" />

                <TextView
                    android:id="@+id/addCourseCodeField"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:text="@string/courseCode"
                    android:textColor="#768591" />

                <EditText
                    android:id="@+id/addCourseCode"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:autofillHints="@string/enterCourseCodeHint"
                    android:hint="@string/enterCourseCodeHint"
                    android:inputType="text"
                    android:paddingStart="20dp"
                    android:paddingEnd="20dp" />

                <TextView
                    android:id="@+id/addCourseDescField"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:text="@string/courseDescription"
                    android:textColor="#768591" />

                <EditText
                    android:id="@+id/addCourseDesc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:autofillHints="@string/enterCourseDescriptionHint"
                    android:hint="@string/enterCourseDescriptionHint"
                    android:inputType="text"
                    android:paddingStart="20dp"
                    android:paddingEnd="20dp" />

                <TextView
                    android:id="@+id/addCourseAreaField"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:text="@string/courseArea"
                    android:textColor="#768591" />

                <RadioGroup
                    android:id="@+id/addCourseArea"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <RadioButton
                        android:id="@+id/addCourse_coreCourses"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/coreCourses" />

                    <RadioButton
                        android:id="@+id/addCourse_E1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/E1" />


                    <RadioButton
                        android:id="@+id/addCourse_E2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/E2" />

                    <RadioButton
                        android:id="@+id/addCourse_E3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/E3" />

                    <RadioButton
                        android:id="@+id/addCourse_E4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/E4" />

                    <RadioButton
                        android:id="@+id/addCourse_E5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/E5" />

                    <RadioButton
                        android:id="@+id/addCourse_E6"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/E6" />

                    <RadioButton
                        android:id="@+id/addCourse_E7"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/E7" />

                    <RadioButton
                        android:id="@+id/addCourse_E8"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/E8" />

                    <RadioButton
                        android:id="@+id/addCourse_E9"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/E9" />

                    <RadioButton
                        android:id="@+id/addCourse_EE"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/EE" />
                </RadioGroup>


                <TextView
                    android:id="@+id/addCourseECTSField"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:text="@string/courseECTS"
                    android:textColor="#768591" />

                <EditText
                    android:id="@+id/addCourseECTS"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:autofillHints="@string/enterCourseECTSHint"
                    android:hint="@string/enterCourseECTSHint"
                    android:inputType="text"
                    android:paddingStart="20dp"
                    android:paddingEnd="20dp" />

                <TextView
                    android:id="@+id/addCourseUrlField"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:text="@string/courseUrl"
                    android:textColor="#768591" />

                <EditText
                    android:id="@+id/addCourseUrl"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:autofillHints="@string/enterCourseUrlHint"
                    android:hint="@string/enterCourseUrlHint"
                    android:inputType="textUri"
                    android:paddingStart="20dp"
                    android:paddingEnd="20dp" />

                <Button
                    android:id="@+id/saveBtn_addCourse"
                    android:layout_width="207dp"
                    android:layout_height="0dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="50dp"
                    android:layout_marginBottom="20dp"
                    android:layout_weight="1"
                    android:background="@drawable/rnd_btn"
                    android:text="@string/saveBtn"
                    android:textColor="#ffffff" />
            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</androidx.drawerlayout.widget.DrawerLayout>