<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">


        <ImageView
            android:id="@+id/uocLogo"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="-150dp"
            android:layout_marginBottom="50dp"
            android:contentDescription="@string/button"
            app:srcCompat="@drawable/logo" />

        <EditText
            android:id="@+id/username"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:autofillHints="@string/emailHint"
            android:ems="10"
            android:hint="@string/emailHint"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/password"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:autofillHints="@string/password"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword" />


        <Button
            android:id="@+id/login"
            android:layout_width="114dp"
            android:layout_height="35dp"
            android:layout_marginBottom="30dp"
            android:background="@drawable/login_btn"
            android:text="@string/logInBtn"
            android:textColor="#ffffff" />

        <TextView
            android:id="@+id/signUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:gravity="center"
            android:text="@string/signUpBtn" />

        <TextView
            android:id="@+id/forgotPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/forgotPassword" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>