<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".activities.EditPostCourseActivity"
    tools:openDrawer="start">

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:headerLayout="@layout/header"
        app:menu="@menu/slide_menu">


    </com.google.android.material.navigation.NavigationView>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".activities.AddContactActivity">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#768591"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme"
            app:navigationIcon="@drawable/ic_menu" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/editPostCourseLL"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                tools:ignore="MissingConstraints"
                tools:layout_editor_absoluteY="20dp">

                <TextView
                    android:id="@+id/editPostCoursePageTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:paddingBottom="10dp"
                    android:text=""
                    android:textColor="#768591"
                    android:textSize="25sp"
                    android:textStyle="bold" />


                <TextView
                    android:id="@+id/editPostCoursePageCodeTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:text="@string/courseCode"
                    android:textColor="#768591" />

                <EditText
                    android:id="@+id/editPostCoursePageCode"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:autofillHints="@string/enterCourseCodeHint"
                    android:hint="@string/enterCourseCodeHint"
                    android:inputType="text"
                    android:paddingStart="20dp"
                    android:paddingEnd="20dp" />

                <TextView
                    android:id="@+id/editPostCoursePageDescTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:text="@string/descriptionHint"
                    android:textColor="#768591" />

                <EditText
                    android:id="@+id/editPostCoursePageDesc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:autofillHints="@string/enterCourseDescriptionHint"
                    android:hint="@string/enterCourseDescriptionHint"
                    android:inputType="text"
                    android:paddingStart="20dp"
                    android:paddingEnd="20dp" />

                <TextView
                    android:id="@+id/editPostCoursePageFieldTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:text="@string/courseArea"
                    android:textColor="#768591" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <CheckBox
                        android:id="@+id/postA"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/postCourseAreaA" />

                    <CheckBox
                        android:id="@+id/postB"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/postCourseAreaB" />


                    <CheckBox
                        android:id="@+id/postC"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/postCourseAreaC" />

                    <CheckBox
                        android:id="@+id/postD"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/postCourseAreaD" />

                    <CheckBox
                        android:id="@+id/postE"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/postCourseAreaE" />

                    <CheckBox
                        android:id="@+id/postF"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/postCourseAreaF" />

                    <CheckBox
                        android:id="@+id/postG"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/postCourseAreaG" />

                    <CheckBox
                        android:id="@+id/postO"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/postCourseAreaO" />


                </LinearLayout>


                <TextView
                    android:id="@+id/editPostCoursePageECTSField"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:text="@string/courseECTS"
                    android:textColor="#768591" />

                <EditText
                    android:id="@+id/editPostCoursePageECTS"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:autofillHints="@string/enterCourseECTSHint"
                    android:hint="@string/enterCourseECTSHint"
                    android:inputType="text"
                    android:paddingStart="20dp"
                    android:paddingEnd="20dp" />

                <Button
                    android:id="@+id/saveBtn_editPostCourse"
                    android:layout_width="207dp"
                    android:layout_height="0dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="50dp"
                    android:layout_marginBottom="20dp"
                    android:layout_weight="1"
                    android:background="@drawable/rnd_btn"
                    android:text="@string/saveBtn"
                    android:textColor="#ffffff" />
            </LinearLayout>
        </ScrollView>
    </LinearLayout>

</androidx.drawerlayout.widget.DrawerLayout>