<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.RegisterActivity">

    <LinearLayout
        android:layout_width="409dp"
        android:layout_height="729dp"
        android:orientation="vertical"
        android:gravity="center"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="1dp"
        tools:ignore="MissingConstraints">

        <EditText
            android:id="@+id/username_register"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/username"
            android:autofillHints="@string/username" />

        <EditText
            android:id="@+id/email_register"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textEmailAddress"
            android:hint="@string/emailHint"
            android:autofillHints="@string/emailHint" />

        <EditText
            android:id="@+id/password_register"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:layout_marginBottom="20dp"
            android:inputType="textPassword"
            android:hint="@string/password"
            android:autofillHints="@string/password" />

        <Button
            android:id="@+id/register_btn"
            android:layout_width="114dp"
            android:layout_height="38dp"
            android:background="@drawable/login_btn"
            android:text="@string/validate"
            android:layout_marginBottom="10dp"
            android:textColor="#ffffff" />

        <TextView
            android:id="@+id/already"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/alreadyUser" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>